styles/Home.module.css
.main {
    display: flex;
    justify-content: top;
    align-items: center;
    flex-direction: column;
    width: 1500x;
    height: 1000px;
    background-image: url("../public/HeartsBackground.jpg");;
    background-size: cover;
}

.logo {
    background-image: url("../public/cookieJarLogo.png");
    width: 350px;
    height: 220px;
}

.mainContainer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: rgba(255, 255, 255, 0.5);
    padding: 40px;
    margin-top: 40px;
    border-radius: 30px;
    border-color: #077ea5;
    border-style: solid;
    border-width: thick;
}

.button {
    display: flex;
    font-weight: 100;
    justify-content: center;
    align-items: center;
    background-color: #f37d8c;
    font-size: 15px;
    font-family: Kanvas File;
    color: white;
    height: 50px;
    width: 200px;
    margin-top: 30px;
    padding-right: 25px;
    padding-left: 25px;
    border-radius: 15px;
    
}

@media screen and (max-width: 550px) {
    .mainContainer {
        max-width: 300px;
    }

    .logo {
        background-image: url("../public/cookieJarLogo.png");
        width: 250px;
        height: auto;
    }
}

